Use virtual threads for email processing
Switch schedulers and processing to virtual threads and refactor analysis flow. Replace the single-thread executor in EmailScheduler with a virtual-thread-per-task executor. Refactor AnalysisService to run email analysis concurrently using virtual threads with a semaphore (maxConcurrency=10) to limit concurrent AI requests; extract per-email logic into analyzeSingleEmail with improved logging, timing and idempotency/error handling. EmailService: include FLAGS and UID in FetchProfile and materialize messages to DTOs using virtual threads with logging. Add spring.threads.virtual.enabled flag to application.yml.